cmake_minimum_required(VERSION 3.23)
project(cpp_lessons)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_lessons
        001_hello_world.cpp)

add_executable(002_variables 002_variables.cpp)
add_executable(003_declare_multiple_variables 003_declare_multiple_variables.cpp)
add_executable(004_constants 004_constants.cpp)
add_executable(005_user_input 005_user_input.cpp)
add_executable(006_basic_calculator 006_basic_calculator.cpp)
add_executable(007_arithmetic_operations 007_arithmetic_operations.cpp)
add_executable(008_numeric_data_types 008_numeric_data_types.cpp)
add_executable(009_numeric_data_types_2 009_numeric_data_types_2.cpp)
add_executable(010_numeric_data_types_3 010_numeric_data_types_3.cpp)
add_executable(011_numeric_data_types_4 011_numeric_data_types_4.cpp)
add_executable(012_booleans 012_booleans.cpp)
add_executable(013_char_and_ascii 013_char_and_ascii.cpp)
add_executable(014_bit_shifting 014_bit_shifting.cpp)
add_executable(015_strings 015_strings.cpp)
add_executable(016_increment_decrement 016_increment_decrement.cpp)
add_executable(017_addition_subtraction_assignment 017_addition_subtraction_assignment.cpp)
add_executable(018_comparison_operators 018_comparison_operators.cpp)
add_executable(019_logical_operators 019_logical_operators.cpp)
add_executable(020_string_concatenation 020_string_concatenation.cpp)
add_executable(021_add_string_nums 021_add_string_nums.cpp)
add_executable(022_string_length 022_string_length.cpp)
add_executable(023_escape_characters 023_escape_characters.cpp)
add_executable(024_cmath 024_cmath.cpp)
add_executable(025_conditionals 025_conditionals.cpp)
add_executable(026_ternary 026_ternary.cpp)
add_executable(027_switch 027_switch.cpp)
add_executable(028_while_loop 028_while_loop.cpp)
add_executable(029_fizzbuzz_while_loop 029_fizzbuzz_while_loop.cpp)
add_executable(030_do_while_loop 030_do_while_loop.cpp)
add_executable(031_for_loop 031_for_loop.cpp)
add_executable(032_break_continue 032_break_continue.cpp)
add_executable(033_arrays 033_arrays.cpp)
add_executable(034_no_array_size 034_no_array_size.cpp)
add_executable(035_get_size_of_array 035_get_size_of_array.cpp)
add_executable(036_multidimensional_arrays 036_multidimensional_arrays.cpp)
add_executable(037_structs 037_structs.cpp)
add_executable(038_declare_multiple_structs 038_declare_multiple_structs.cpp)
add_executable(039_references 039_references.cpp)
add_executable(040_print_memory_address 040_print_memory_address.cpp)
add_executable(041_pointers 041_pointers.cpp)
add_executable(041_modify_values_of_pointers 041_modify_values_of_pointers.cpp)